making changes to index file and part 2

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
-  <script src="fundamentals-part1.js"></script>
+  <title>whuddup</title>
+  <!--script src="fundamentals-part1.js"></script-->
+  <script src="fundamentals-part2.js"></script>
   <meta charset="UTF-8"/>
 </head>
 <body>
