--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>whuddup</title>
   <!--script src="fundamentals-part1.js"></script-->
-  <script src="fundamentals-part2.js"></script>
+  <!--script src="fundamentals-part2.js"></script-->
+  <script src="fizzbuzz.js"></script>
   <meta charset="UTF-8"/>
 </head>
 <body>
