rock paper scissors assignment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>whuddup</title>
   <!--script src="fundamentals-part1.js"></script-->
   <!--script src="fundamentals-part2.js"></script-->
-  <script src="fizzbuzz.js"></script>
+  <!--script src="fizzbuzz.js"></script-->
+  <script src="assignment.js"></script>
   <meta charset="UTF-8"/>
 </head>
 <body>
