changed name of file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!--script src="fundamentals-part1.js"></script-->
   <!--script src="fundamentals-part2.js"></script-->
   <!--script src="fizzbuzz.js"></script-->
-  <script src="assignment.js"></script>
+  <script src="rockpaperscissor.js"></script>
   <meta charset="UTF-8"/>
 </head>
 <body>
