making changes to game june 15

--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
   <!--script src="fundamentals-part1.js"></script-->
   <!--script src="fundamentals-part2.js"></script-->
   <!--script src="fizzbuzz.js"></script-->
+
   <script src="rockpaperscissor.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+
   <meta charset="UTF-8"/>
 </head>
 <body>
-    <h1>whuddup.</h1>
+    <div id="main-div">
+      <h1 id="game-name">Rock, Paper, Scissors</h1>
+    </div>
+
 </body>
 </html>
