june 15 changes to rock paper scissors

--- a/index.html
+++ b/index.html
@@ -18,5 +18,19 @@
       <h1 id="game-name">Rock, Paper, Scissors</h1>
     </div>
 
+    <div id="rps-div">
+      <div class="player block">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
+      <div class="computer block">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+
 </body>
 </html>
