june 15 fixing layout of divs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <script src="rockpaperscissor.js"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+
 
   <meta charset="UTF-8"/>
 </head>
@@ -19,16 +20,35 @@
     </div>
 
     <div id="rps-div">
+      <div class="icon-box">
+        <div class="box">ICON</div>
+        <div class="box">ICON</div>
+      </div>
+      
+
+
       <div class="player block">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+          <img src="rock-hands.png" alt="rock" width="90" height="90">
+        </div>
+        <div>
+          <img src="paper-hands.png" alt="rock" width="90" height="90">
+        </div>
+        <div>
+          <img src="scissor-hands.png" alt="rock" width="90" height="90">
+        </div>
       </div>
 
       <div class="computer block">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+          <img src="rock-hands.png" alt="rock" width="90" height="90">
+        </div>
+        <div>
+          <img src="paper-hands.png" alt="rock" width="90" height="90">
+        </div>
+        <div>
+          <img src="scissor-hands.png" alt="rock" width="90" height="90">
+        </div>
       </div>
     </div>
 
