june 15 need to fix bigger board area

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>whuddup</title>
+  <title>rock, paper, scissors!</title>
   <!--script src="fundamentals-part1.js"></script-->
   <!--script src="fundamentals-part2.js"></script-->
   <!--script src="fizzbuzz.js"></script-->
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="main-div">
-      <h1 id="game-name">Rock, Paper, Scissors</h1>
+      <h1 id="game-name">Rock, Paper, Scissors!</h1>
     </div>
 
     <div id="rps-div">
