--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id="title-div">
       <h1 id="game-name">Rock, Paper, Scissors!</h1>
-      <div class="msg"> <!-- make this pop out and disappear when clicked on-->
+      <div class="msg" display="none"> <!-- make this pop out and disappear when clicked on-->
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
        
