--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id="title-div">
       <h1 id="game-name">Rock, Paper, Scissors!</h1>
-      <div class="msg" display="none"> <!-- make this pop out and disappear when clicked on-->
+      <div class="msg" > <!-- make this pop out and disappear when clicked on-->
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
        
@@ -32,9 +32,9 @@
           <h1>remove me later</h1>
         </div>
         <div class="icon-div"> <!-- where the options are held-->
-          <img src="rock-hands.png" alt="rock" width="90" height="90">
-          <img src="paper-hands.png" alt="rock" width="90" height="90">
-          <img src="scissor-hands.png" alt="rock" width="90" height="90">
+          <img id="rock" src="rock-hands.png" alt="rock" width="90" height="90" onclick="playerPlay()">
+          <img id="paper" src="paper-hands.png" alt="paper" width="90" height="90" onclick="playerPlay()">
+          <img id="scissors" src="scissor-hands.png" alt="scissors" width="90" height="90" onclick="playerPlay()">
         </div>
       </div>
 
@@ -44,8 +44,8 @@
         </div>
         <div class="icon-div"> <!-- where the options are held-->
           <img src="rock-hands.png" alt="rock" width="90" height="90">
-          <img src="paper-hands.png" alt="rock" width="90" height="90">
-          <img src="scissor-hands.png" alt="rock" width="90" height="90">
+          <img src="paper-hands.png" alt="paper" width="90" height="90">
+          <img src="scissor-hands.png" alt="scissors" width="90" height="90">
         </div>
 
       </div>
