--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <div class="player choice"> <!-- where the icons will slide to for player-->
           <h1>remove me later</h1>
         </div>
-        <div class="icon-div"> <!-- where the options are held-->
-          <img id="rock" src="rock-hands.png" alt="rock" width="90" height="90" onclick="playerPlay()">
-          <img id="paper" src="paper-hands.png" alt="paper" width="90" height="90" onclick="playerPlay()">
-          <img id="scissors" src="scissor-hands.png" alt="scissors" width="90" height="90" onclick="playerPlay()">
+        <div class="icon-div" onclick="playerPlay()"> <!-- where the options are held-->
+          <img id="rock" src="rock-hands.png" alt="rock" width="90" height="90">
+          <img id="paper" src="paper-hands.png" alt="paper" width="90" height="90">
+          <img id="scissors" src="scissor-hands.png" alt="scissors" width="90" height="90">
         </div>
       </div>
 
