june 22 going to deep dive in intermediate js

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
 <head>
   <title>rock, paper, scissors!</title>
-  <!--script src="fundamentals-part1.js"></script-->
-  <!--script src="fundamentals-part2.js"></script-->
-  <!--script src="fizzbuzz.js"></script-->
 
   <script src="rockpaperscissor.js"></script>
   <link rel="stylesheet" href="style.css">
@@ -31,8 +28,8 @@
         <div class="player choice"> <!-- where the icons will slide to for player-->
           <h1>remove me later</h1>
         </div>
-        <div class="icon-div" onclick="playerPlay()"> <!-- where the options are held-->
-          <img id="rock" src="rock-hands.png" alt="rock" width="90" height="90">
+        <div class="icon-div"> <!-- where the options are held-->
+          <img id="rock" src="rock-hands.png" alt="rock" width="90" height="90" onclick="game()">
           <img id="paper" src="paper-hands.png" alt="paper" width="90" height="90">
           <img id="scissors" src="scissor-hands.png" alt="scissors" width="90" height="90">
         </div>
