--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h1>remove me later</h1>
         </div>
         <div class="icon-div"> <!-- where the options are held-->
-          <img id="rock" src="rock-hands.png" alt="rock" width="90" height="90" onclick="game()">
+          <img id="rock" src="rock-hands.png" alt="rock" width="90" height="90" onclick="playerPlay()">
           <img id="paper" src="paper-hands.png" alt="paper" width="90" height="90">
           <img id="scissors" src="scissor-hands.png" alt="scissors" width="90" height="90">
         </div>
